--- a/src/pages/forms/forms.scss
+++ b/src/pages/forms/forms.scss
@@ -48,7 +48,7 @@ page-forms {
         height: 60px;
         border-radius: 100px;
         }
-        
+
     #title{
        padding-left: 150px;  
        padding-top: 25px;
@@ -111,4 +111,4 @@ page-forms {
         width: 100%;
         height:100%;
     }
-
+}
