--- a/src/pages/forms/forms.scss
+++ b/src/pages/forms/forms.scss
@@ -59,6 +59,30 @@ page-forms {
         color:white;
         font-size: 20px;
     }
+
+    #arrowbox{
+        width: 50px;
+        height: 50px;
+    }
+
+    .content_line1{
+        height: 60px;
+        width: 100%;
+        margin-left: 20px;
+    }
+
+    .content_line2{
+        height: 20px;
+        widows: 100%;
+        margin-left: 20px;
+    }
+
+    .line_text{
+        font-family: Helvetica;
+        font-size: 30px;
+        color: #666a70;
+    }
+    
     #footer
     {
         width:400px;
