--- a/src/pages/forms/forms.scss
+++ b/src/pages/forms/forms.scss
@@ -9,7 +9,7 @@ page-forms {
     }
     #header{
         width: 100%;
-        height: 90px;
+        height: 70px;
         /*border: 1px solid green;*/
         display: flex;
         justify-content: center;
@@ -23,13 +23,20 @@ page-forms {
         align-content: center;
     }
     #divider{
-        width:100%;
+        width:90%;
         height: 2px;
         background-color: gray;
     }
+    #rows{
+        width: 100%;
+        height: calc(100% - 150px);
+        justify-content: center;
+       /* align-items: center;*/
+       flex-wrap: wrap;
+    }
     #arrowbox{
-        width: 12.5%;
-        height: 30px;
+        width: 50px;
+        height: 50px;
     }
     #arrowimage{
         width:100%;
@@ -79,13 +86,13 @@ page-forms {
 
     .line_text{
         font-family: Helvetica;
-        font-size: 30px;
+        font-size: 28px;
         color: #666a70;
     }
 
     #footer
     {
-        width:400px;
+        width:100%;
         height:80px;
         border: 1px solid black;
         display: flex;
