--- a/src/pages/feed/feed.scss
+++ b/src/pages/feed/feed.scss
@@ -1,155 +1,179 @@
 page-feed {
-    html{
-        font-family: sans-serif;
-    }
-    #background{
-        width: 100%;
-        height: 100%;
-        border: 2px dotted black;
-    }
-    #header{
-        width: 100%;
-        height: 90px;
-        /*border: 1px solid green;*/
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-    #divider_box{
-        width: 100%;
-        height: 3px;
-        display: flex;
-        justify-content: center;
-        align-content: center;
-    }
-    #divider{
-        width:100%;
-        height: 2px;
-        background-color: gray;
-    }
-    #arrowbox{
-        width: 12.5%;
-        height: 30px;
-    }
-    #arrowimage{
-        width:100%;
-        height:100%;
-        padding-left:12px;
-    }
-    #profile_circle{
-        width: 15%px;
-        height: 15%px;
-        border-radius: 100px;
-        /*border: 2px solid blue;*/
-    }
-    #profile
-        {
-            width: 60px;
-        height: 60px;
-        border-radius: 100px;
+         html{
+            font-family: sans-serif;
         }
-    #title{
-       padding-left: 150px;  
-       padding-top: 25px;
-       font-family: sans-serif;
-    }
-    #rows{
-        width: 400px;
-        height: 490px;
-        display: flex;
-        justify-content: center;
-       /* align-items: center;*/
-       flex-wrap: wrap;
-       
-    }
-    .row{
-        width: 350px;
-        height: 150px;
-        /*border: 1px solid black;*/
-        display: flex;
-        justify-content: space-evenly;
-        align-items: center;
-        align-content: center;
-    }
-    .row2{
-        width: 350px;
-        height: 150px;
-        border: 1px solid black;
-        display: flex;
-        justify-content: space-evenly;
-        align-items: center;
-        align-content: center;
-        border-radius: 15px;
-    }
-    .box{
-        width: 145px;
-        height: 145px;
-        border: 1px solid black;
-        display: flex;
-        border-radius: 25px;
-        box-shadow: 2px 2px 1px grey;
-        display:flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    
+        #background{
+            width: 100%;
+            height: 100%;
+            border: 2px dotted black;
+        }
+        #header{
+            width: 100%;
+            height: 70px;
+            /*border: 1px solid green;*/
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        #divider_box{
+            width: 100%;
+            height: 3px;
+            display: flex;
+            justify-content: center;
+            align-content: center;
+        }
+        #divider{
+            width:90%;
+            height: 2px;
+            background-color: gray;
+        }
+        #title{
+            width: 100%;
+            height:50px;
+            display: flex;
+        }
+        #feedtext{
+            padding-left: 10%;
+        }
+        #searchbox{
+            height:45px;
+            width:45px;
         
-    }
-    .hovercamText{
-        color:white;
-        font-size: 20px;
-    }
-    #footer
-    {
-        width:400px;
-        height:80px;
-        border: 1px solid black;
-        display: flex;
-    
+            
+        }
+        #searchimage{
+            height:45px;
+            width:45px;
+            
+        }
+        #arrowbox{
+            width: 50px;
+            height: 50px;
+        }
+        #arrowimage{
+            width:50px;
+            height:50px;
+            padding-left:12px;
+        }
+        #profile_circle{
+            width: 60px;
+            height: 60px;
+            border-radius: 100px;
+            /*border: 2px solid blue;*/
+        }
+        #profile
+            {
+            width: 60px;
+            height: 60px;
+            border-radius: 100px;
+            }
+        #pagetitle{
+           padding-left: 150px;  
+           padding-top: 25px;
+           font-family: sans-serif;
+        }
+        #rows{
+            width: 100%;
+            height: calc(100% - 260px)    ;
+            display: flex;
+            justify-content: center;
+           /* align-items: center;*/
+           flex-wrap: wrap;
+           
+        }
+        .row{
+            width: 80%;
+            height: 30%;
+            /*border: 1px solid black;*/
+            border-radius: 5%;
+            background-color: lightgray;
+            border: 1px solid black;
+        }
+        .row2{
+            width: 350px;
+            height: 150px;
+            border: 1px solid black;
+            display: flex;
+            justify-content: space-evenly;
+            align-items: center;
+            align-content: center;
+            border-radius: 15px;
+        }
+        .box{
+           
+            height: 100%;
+            width: 45%;
+            border: 1px solid black;
+            display: flex;
+            border-radius: 25px;
+            box-shadow: 2px 2px 1px grey;
+            display:flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
         
-    }
-    .circle_container{
-    
-        /* width: 60px;
-        height: 100px;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        align-content: start; */
-        width: 20%;
-        height: 100%;
-       
-    }
-    .circle_box{
-        width: 100%;
-        height: 70%;
-        display: flex;
-        flex-direction:column;
-        justify-content: flex-end;
-        align-items: center;
-       
-    }
-    .label{
-        width:100%;
-        height:30%;
-        display:flex;
-        justify-content: center;
-        align-items: center;
-    }
-    .circle{
-        width:45px;
-        height:45px;
-        border-radius: 45px;
-        border: 1px solid black;
-    }
-    p{
-        margin: 0px;
-    }
-    .icons
-    {
-        width: 100%;
-        height:100%;
-    }
+            
+        }
+        .hovercamText{
+            color:white;
+            font-size: 20px;
+        }
+        #footer
+        {
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            right:0;
+            width:100%;
+            height:80px;
+            border: 1px solid black;
+            display: flex;
+        
+            
+        }
+        .circle_container{
+        
+            /* width: 60px;
+            height: 100px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            align-content: start; */
+            width: 20%;
+            height: 100%;
+           
+        }
+        .circle_box{
+            width: 100%;
+            height: 70%;
+            display: flex;
+            flex-direction:column;
+            justify-content: flex-end;
+            align-items: center;
+           
+        }
+        .label{
+            width:100%;
+            height:30%;
+            display:flex;
+            justify-content: center;
+            align-items: center;
+        }
+        .circle{
+            width:45px;
+            height:45px;
+            border-radius: 45px;
+            border: 1px solid black;
+        }
+        p{
+            margin: 0px;
+        }
+        .icons
+        {
+            width: 100%;
+            height:100%;
+        }
 
-}
+    }
+    
