--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,4 +1,6 @@
 page-home {
+
+
 html{
         font-family: sans-serif;
     }
@@ -100,6 +102,12 @@ html{
         color:white;
         font-size: 20px;
     }
+
+    footer {
+      width: 100%;
+      height: 80px;
+    }
+
     #footer
     {
         position: fixed;
