fixed merge conflicts and styling in feed

--- a/src/pages/feed/feed.scss
+++ b/src/pages/feed/feed.scss
@@ -32,6 +32,11 @@ page-feed {
             height:50px;
             display: flex;
         }
+
+        .title_rec {
+          width: 25%;
+          height: 100%;
+        }
         #feedtext{
             padding-left: 10%;
         }
