--- a/src/pages/support/support.scss
+++ b/src/pages/support/support.scss
@@ -1,7 +1,5 @@
-page-home {
-
-
-html{
+page-support {
+    html{
         font-family: sans-serif;
     }
     #background{
@@ -29,91 +27,71 @@ html{
         height: 2px;
         background-color: gray;
     }
+    #rows{
+        width: 100%;
+        height: calc(100% - 150px);
+        justify-content: center;
+       /* align-items: center;*/
+       flex-wrap: wrap;
+    }
     #arrowbox{
         width: 50px;
         height: 50px;
     }
     #arrowimage{
-        width:50px;
-        height:50px;
+        width:100%;
+        height:100%;
         padding-left:12px;
     }
     #profile_circle{
-        width: 60px;
-        height: 60px;
+        width: 15%px;
+        height: 15%px;
         border-radius: 100px;
         /*border: 2px solid blue;*/
     }
     #profile
         {
-        width: 60px;
+            width: 60px;
         height: 60px;
         border-radius: 100px;
-        }   
+        }
+
     #title{
        padding-left: 150px;  
        padding-top: 25px;
        font-family: sans-serif;
     }
-    #rows{
-        width: 100%;
-        height: calc(100% - 210px)    ;
-        display: flex;
-        justify-content: center;
-       /* align-items: center;*/
-       flex-wrap: wrap;
-       
-    }
-    .row{
-        width: 80%;
-        height: 30%;
-        /*border: 1px solid black;*/
-        display: flex;
-        justify-content: space-evenly;
-        align-items: center;
-        align-content: center;
-    }
-    .row2{
-        width: 350px;
-        height: 150px;
-        border: 1px solid black;
-        display: flex;
-        justify-content: space-evenly;
-        align-items: center;
-        align-content: center;
-        border-radius: 15px;
-    }
-    .box{
-       
-        height: 100%;
-        width: 45%;
-        border: 1px solid black;
-        display: flex;
-        border-radius: 25px;
-        box-shadow: 2px 2px 1px grey;
-        display:flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    
-        
-    }
+
     .hovercamText{
         color:white;
         font-size: 20px;
     }
 
-    footer {
-      width: 100%;
-      height: 80px;
+    #arrowbox{
+        width: 50px;
+        height: 50px;
+    }
+
+    .content_line1{
+        height: 60px;  
+        width: 100%;
+        margin-left: 20px;
+    }
+
+    .content_line2{
+        height: 20px;
+        widows: 100%;
+        margin-left: 20px;
+    }
+
+    .line_text{
+        font-family: Helvetica;
+        font-size: 28px;
+        color: #666a70;
     }
 
     #footer
     {
-        position: fixed;
-        bottom: 0;
-        left: 0;
-        right:0;
         width:100%;
         height:80px;
         border: 1px solid black;
