seems to be almost final

--- a/src/components/footer/footer.html
+++ b/src/components/footer/footer.html
@@ -21,7 +21,7 @@
     </div>
     <div class="circle_container">
         <div class="circle_box">
-            <div class="circle"(click)="goToFeedPage()">
+            <div class="circle" (click)="goToFeedPage()">
                 <img src="../../assets/icon/Icons/Bottom-row/home.png" class="icons">
             </div>
          </div>
@@ -31,7 +31,7 @@
     </div>
     <div class="circle_container">
         <div class="circle_box">
-            <div class="circle">
+            <div class="circle" (click)="goToSupportPage()">
                 <img src="../../assets/icon/Icons/Bottom-row/support.png" class="icons">
              </div>
         </div>
