finished header templte

--- a/src/components/header/header.html
+++ b/src/components/header/header.html
@@ -1,4 +1,20 @@
 <!-- Generated template for the HeaderComponent component -->
-<div>
-  {{text}}
+<div id="header">
+    <div id="profilebox">
+        <div id="profile_circle">
+            <img src="../../assets/icon/Icons/Header/avi.png" id="profile">
+        </div>
+    </div>
+    <div id="spacebox">
+    </div>
+    <div id="textbox">
+        <h1 id="title">
+            <b></b>
+        </h1>
+    </div>
+</div>
+<div id="divider_box">
+    <div id="divider">
+
+    </div>
 </div>
