--- a/src/components/footer/footer.html
+++ b/src/components/footer/footer.html
@@ -41,7 +41,7 @@
     </div>
     <div class="circle_container">
         <div class="circle_box">
-            <div class="circle">
+            <div class="circle"(click)="goToMessagesPage()">
                     <img src="../../assets/icon/Icons/Bottom-row/messages.png" class="icons">
              </div>
         </div>
