finished headers on all pages

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -37,4 +37,16 @@ header {
         height: 2px;
         background-color: gray;
     }
+    #profile_circle{
+        width: 60px;
+        height: 60px;
+        border-radius: 100px;
+        /*border: 2px solid blue;*/
+    }
+    #profile
+        {
+        width: 60px;
+        height: 60px;
+        border-radius: 100px;
+        }
 }
