--- a/src/components/header/header.html
+++ b/src/components/header/header.html
@@ -9,7 +9,7 @@
     </div>
     <div id="textbox">
         <h1 id="title">
-            <b></b>
+            <b>{{headerTitle}}</b>
         </h1>
     </div>
 </div>
