--- a/src/pages/messages/messages.scss
+++ b/src/pages/messages/messages.scss
@@ -57,26 +57,21 @@ html{
        padding-top: 25px;
        font-family: sans-serif;
     }
-    #rows{
+    #rows_container{
         width: 100%;
-        height: calc(100% - 210px)    ;
-        display: flex;
-        justify-content: center;
-       /* align-items: center;*/
-        flex-wrap: wrap;
-       
+        height: calc(100% - 210px);
     }
     .row{
-        width: 100%;
-        height: 12.5%;
-        display: flex;
-        justify-content: space-evenly;
-        align-items: center;
-        align-content: center;
+            width: 100%;
+            height: 12.5%;
+            display: flex;
+            justify-content: space-evenly;
+            align-items: center;
+            align-content: center;
     }
     .row_line{
-        width: 80%;
-        height: 1px;
+            width: 80%;
+            height: 1px;
     }
     .box{
        
