--- a/src/components/pilot/pilot.html
+++ b/src/components/pilot/pilot.html
@@ -1,4 +1,56 @@
-<!-- Generated template for the PilotComponent component -->
-<div>
-  {{text}}
-</div>
+  <div id="rows">
+      <div id="arrowbox">
+        <img src="../../assets/icon/Icons/Header/backarrow.png" id="arrowimage">
+      </div>
+      <div class= "content_line2">
+        <div class= "line_text">
+                
+      </div>
+    </div>
+    <div class= "content_line1">
+          <div class= "line_text">
+              Images
+          </div>
+    </div>
+    <div class= "content_line1">
+          <div class= "line_text">
+              Specifications
+          </div>
+    </div>
+    <div class= "content_line1">
+          <div class= "line_text">
+              Manual
+          </div>
+    </div>
+    <div class= "content_line1">
+          <div class= "line_text">
+              Quickstart Guide
+          </div>
+    </div>
+    <div class= "content_line1">
+      <div class= "line_text">
+              Videos
+      </div>
+    </div>
+    <div class= "content_line1">
+      <div class= "line_text">
+              Flyers
+      </div>
+    </div>
+    <div class= "content_line1">
+      <div class= "line_text">
+              Blog Posts
+      </div>
+    </div>
+    <div class= "content_line1">
+      <div class= "line_text">
+              Quote Request
+      </div>
+    </div>
+    <div class= "content_line1">
+      <div class= "line_text">
+              Purchase
+      </div>
+    </div>
+    </div>
+
