--- a/src/components/pilot/pilot.scss
+++ b/src/components/pilot/pilot.scss
@@ -1,3 +1,123 @@
 pilot {
+    html{
+        font-family: sans-serif;
+    }
+    #background{
+        width: 100%;
+        height: 100%;
+        border: 2px dotted black;
+    }
+   
+    #rows{
+        width: 100%;
+        height: calc(100% - 150px);
+        justify-content: center;
+       /* align-items: center;*/
+       flex-wrap: wrap;
+    }
+    #arrowbox{
+        width: 50px;
+        height: 50px;
+    }
+    #arrowimage{
+        width:100%;
+        height:100%;
+        padding-left:12px;
+    }
+    #profile_circle{
+        width: 15%px;
+        height: 15%px;
+        border-radius: 100px;
+        /*border: 2px solid blue;*/
+    }
+    #profile
+        {
+            width: 60px;
+        height: 60px;
+        border-radius: 100px;
+        }
 
+
+
+    .hovercamText{
+        color:white;
+        font-size: 20px;
+    }
+
+    #arrowbox{
+        width: 50px;
+        height: 50px;
+    }
+
+    .content_line1{
+        height: 40px;  
+        width: 100%;
+        margin-left: 40px;
+        
+    }
+
+    .content_line2{
+        height: 20px;
+        widows: 100%;
+        margin-left: 20px;
+    }
+
+    .line_text{
+        font-family: Helvetica;
+        font-size: 20px;
+        color: #666a70;
+    }
+
+    #footer
+    {
+        width:100%;
+        height:80px;
+        border: 1px solid black;
+        display: flex;
+    
+        
+    }
+    .circle_container{
+    
+        /* width: 60px;
+        height: 100px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        align-content: start; */
+        width: 20%;
+        height: 100%;
+       
+    }
+    .circle_box{
+        width: 100%;
+        height: 70%;
+        display: flex;
+        flex-direction:column;
+        justify-content: flex-end;
+        align-items: center;
+       
+    }
+    .label{
+        width:100%;
+        height:30%;
+        display:flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .circle{
+        width:45px;
+        height:45px;
+        border-radius: 45px;
+        border: 1px solid black;
+    }
+    p{
+        margin: 0px;
+    }
+    .icons
+    {
+        width: 100%;
+        height:100%;
+    }
 }
