things work all but back arrow not implenetend

--- a/src/pages/products-pilot/products-pilot.scss
+++ b/src/pages/products-pilot/products-pilot.scss
@@ -74,6 +74,7 @@ page-products-pilot {
         align-items:center;
         font-size:38px;
         color:white;
+        cursor: pointer;
     }
     .row2{
         width: 350px;
