--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -47,6 +47,7 @@ footer {
         height:45px;
         border-radius: 45px;
         border: 1px solid black;
+        cursor: pointer;
     }
     p{
         margin: 0px;
