--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -54,6 +54,7 @@ html{
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        cursor: pointer;
     
         
     }
