--- a/src/pages/support/support.scss
+++ b/src/pages/support/support.scss
@@ -43,6 +43,7 @@ page-support {
         font-family: Helvetica;
         font-size: 28px;
         color: #666a70;
+        cursor: pointer;
     }
 
     #footer
