--- a/src/pages/feed/feed.scss
+++ b/src/pages/feed/feed.scss
@@ -61,6 +61,7 @@ page-feed {
         #arrowbox{
             width: 50px;
             height: 50px;
+            cursor: pointer;
         }
         #arrowimage{
             width:50px;
