--- a/src/pages/forms/forms.scss
+++ b/src/pages/forms/forms.scss
@@ -18,6 +18,7 @@ page-forms {
     #arrowbox{
         width: 50px;
         height: 50px;
+        cursor: pointer;
     }
     #arrowimage{
         width:100%;
