--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -13,6 +13,7 @@ html{
     #arrowbox{
         width: 50px;
         height: 50px;
+        cursor: pointer;
     }
     #arrowimage{
         width:50px;
