--- a/src/pages/messages/messages.scss
+++ b/src/pages/messages/messages.scss
@@ -31,6 +31,7 @@ html{
     #arrowbox{
         width: 50px;
         height: 50px;
+        cursor: pointer;
     }
     #arrowimage{
         width:50px;
