--- a/src/pages/products-pilot/products-pilot.scss
+++ b/src/pages/products-pilot/products-pilot.scss
@@ -30,6 +30,7 @@ page-products-pilot {
     #arrowbox{
         width: 50px;
         height: 50px;
+        cursor: pointer;
     }
     #arrowimage{
         width:50px;
