--- a/src/pages/support/support.scss
+++ b/src/pages/support/support.scss
@@ -17,6 +17,7 @@ page-support {
     #arrowbox{
         width: 50px;
         height: 50px;
+        cursor: pointer;
     }
     #arrowimage{
         width:100%;
