--- a/src/components/pilot/pilot.scss
+++ b/src/components/pilot/pilot.scss
@@ -67,6 +67,7 @@ pilot {
         font-family: Helvetica;
         font-size: 20px;
         color: #666a70;
+        cursor: pointer;
     }
 
     #footer
