--- a/src/pages/forms/forms.scss
+++ b/src/pages/forms/forms.scss
@@ -51,6 +51,7 @@ page-forms {
         font-family: Helvetica;
         font-size: 28px;
         color: #666a70;
+        cursor: pointer;
     }
 
     #footer
