--- a/src/pages/messages/messages.scss
+++ b/src/pages/messages/messages.scss
@@ -129,6 +129,12 @@ html{
     p{
         margin: 0px;
     }
+    #messages_text{
+        color: white
+    }
+    #notif_text{
+        color: #91bbff
+    }
     .icons{
         width: 100%;
         height:100%;
