--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -41,37 +41,32 @@ header {
         width: 50px;
         height: 50px;
         border-radius: 50px;
+        cursor: pointer;
         /*border: 2px solid blue;*/
     }
-    #profile
-        {
+    #profile{
         width: 50px;
         height: 50px;
         border-radius: 50px;
-        }
-    .overlay {
-        height:100%;
-        width: 0;
+
+    }
+    .sidenav{
+        height: 100%;
+        width:0;
         position: fixed;
-        z-index: 1;
-        left: 0;
+        opacity: 0.8;
         top: 0;
-        background-color: rgb(0,0,0);
-        background-color: rgba(0,0,0, 0.9);
+        left: 0;
+        background-color: #111;
         overflow-x: hidden;
+        padding-top: 60px;
         transition: 0.5s;
     }
-    .overlay-content {
-        position: relative;
-        top: 25%;
-        width: 100%;
-        text-align: center;
-        margin-top: 30px;
-    }
-    .overlay .closebtn{
+    .sidenav .closebutton{
         position: absolute;
-        top: 20px;
-        right: 45px;
-        font-size: 60px;
+        top: 0;
+        right: 25px;
+        font-size: 36px;
+        margin-left: 50px;
     }
 }
