--- a/src/pages/support/support.scss
+++ b/src/pages/support/support.scss
@@ -66,15 +66,15 @@ page-support {
         color: #666a70;
     }
 
-    #footer
-    {
-        width:100%;
-        height:80px;
-        border: 1px solid black;
-        display: flex;
+    // #footer
+    // {
+    //     width:100%;
+    //     height:80px;
+    //     border: 1px solid black;
+    //     display: flex;
     
         
-    }
+    // }
     .circle_container{
     
         /* width: 60px;
@@ -88,34 +88,5 @@ page-support {
         height: 100%;
        
     }
-    .circle_box{
-        width: 100%;
-        height: 70%;
-        display: flex;
-        flex-direction:column;
-        justify-content: flex-end;
-        align-items: center;
-       
-    }
-    .label{
-        width:100%;
-        height:30%;
-        display:flex;
-        justify-content: center;
-        align-items: center;
-    }
-    .circle{
-        width:45px;
-        height:45px;
-        border-radius: 45px;
-        border: 1px solid black;
-    }
-    p{
-        margin: 0px;
-    }
-    .icons
-    {
-        width: 100%;
-        height:100%;
-    }
+    
 }
