side navbar header

--- a/src/components/header/header.html
+++ b/src/components/header/header.html
@@ -14,14 +14,30 @@
     </div>
 </div>
 <div id="mySidenav" class="sidenav">
-        <a href= "javascript.:void(0)" class= "closebutton" (click)="toggleMenu()">&times;</a>
-        <a href="#">About</a>
-        <a href="#">Services</a>
-        <a href="#">Clients</a>
-        <a href="#">Contact</a>
+    <div id= "sidenav_header">
+        <div id= "sidenav_profilebox">
+                    <img src= "../../assets/icon/Icons/Header/avi.png" id= "sidenav_profile" (click)="toggleMenu()">
+        </div>
+        <div id= "sidenav_name">
+            <div id= "sidenav_name_name">
+                Branricarl
+            </div>
+            <div id= "sidenav_name_company">
+                HoverVan Pathway Things asdfasjdfkjdsakfjdkf jakdfjdskfjaskdjfkdsj afkdjfkdsjafkjf dkafjskdjfk
+            </div>
+        </div>
+            <!-- <div id="divider_box">
+                <div id="divider">
+                
+                </div>
+            </div>
+        -->
 </div>
+</div>
+
 <div id="divider_box">
     <div id="divider">
 
     </div>
 </div>
+
