--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -10,6 +10,7 @@ footer {
         height:80px;
         border: 1px solid black;
         display: flex;
+        z-index: 1;
     
         
     }
