account final product probably

--- a/src/components/header/header.html
+++ b/src/components/header/header.html
@@ -16,23 +16,64 @@
 <div id="mySidenav" class="sidenav">
     <div id= "sidenav_header">
         <div id= "sidenav_profilebox">
-                    <img src= "../../assets/icon/Icons/Header/avi.png" id= "sidenav_profile" (click)="toggleMenu()">
+                    <img src= "../../assets/icon/Icons/Menu/avi-large.png" id= "sidenav_profile" (click)="toggleMenu()">
         </div>
         <div id= "sidenav_name">
             <div id= "sidenav_name_name">
                 Branricarl
             </div>
             <div id= "sidenav_name_company">
-                HoverVan Pathway Things asdfasjdfkjdsakfjdkf jakdfjdskfjaskdjfkdsj afkdjfkdsjafkjf dkafjskdjfk
+                Pathway Innovations and Technologies, inc.
             </div>
-        </div>
-            <!-- <div id="divider_box">
-                <div id="divider">
+        </div>    
+    </div>
+    <div id="divider_box">
+            <div id="divider">
                 
+            </div>
+    </div>
+    <div id= "sidenav_body">
+        <div class= "sidenav_row">
+            <div class= "sidenav_row_content">
+                <div class= "sidenav_row_picturebox">
+                    <img src= "../../assets/icon/Icons/Menu/avi-small.png" class= "sidenav_row_picture">
+                </div>
+                <div class= "sidenav_row_text">
+                    Profile
                 </div>
             </div>
-        -->
-</div>
+        </div>
+        <div class= "sidenav_row">
+            <div class= "sidenav_row_content">
+                <div class= "sidenav_row_picturebox">
+                    <img src= "../../assets/icon/Icons/Menu/messages.png" class= "sidenav_row_picture">
+                </div>
+                <div class= "sidenav_row_text">
+                    Messages
+                </div>
+            </div>
+        </div>
+        <div class= "sidenav_row">
+            <div class= "sidenav_row_content">
+                <div class= "sidenav_row_picturebox">
+                    <img src= "../../assets/icon/Icons/Home/search.png" class= "sidenav_row_picture">
+                </div>
+                <div class= "sidenav_row_text">
+                    Search
+                </div>
+            </div>
+        </div>
+        <div class= "sidenav_row">
+            <div class= "sidenav_row_content">
+                <div class= "sidenav_row_picturebox">
+                    <img src= "../../assets/icon/Icons/Menu/pricing.png" class= "sidenav_row_picture">
+                </div>
+                <div class= "sidenav_row_text">
+                    Pricing
+                </div>
+            </div>
+        </div>  
+    </div>
 </div>
 
 <div id="divider_box">
