--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -54,37 +54,31 @@ header {
         height: 100%;
         width:0;
         position: fixed;
-        opacity: 1;
         top: 0;
         left: 0;
         background-color: white;
         overflow-x: hidden;
         transition: 0.5s;
         z-index: 2;
-    }
-    .sidenav .closebutton{
-        position: absolute;
-        top: 0;
-        right: 25px;
-        font-size: 36px;
-        margin-left: 50px;
+        
     }
     #sidenav_profilebox{
         height: 100%;
         width: 45%;
-        border: 2px solid black;
+        // border: 0.1px solid black;
         display: flex;
         align-items: center;
         justify-content: center;
     }
     #sidenav_profile{
-        height: 80px;
-        width: 80px;
+        height: 90px;
+        width: 90px;
+        cursor: pointer;
 
     }
     #sidenav_header{
         height: 22.5%;
-        border: 2px solid black;
+        // border: 0.1px solid black;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -92,23 +86,54 @@ header {
     #sidenav_name{
         height: 100%;
         width: 55%;
-        border: 2px solid black;
+        // border: 0.1px solid black;
     }
     #sidenav_name_name{
         height: 50%;
-        border: 2px solid black;
+        // border: 0.1px solid black;
         display: flex;
         justify-content: center;
         align-items: center;
-        font-size: 4vw;
+        font-size: 28px;
+        padding-top: 35%;
+        margin: 5px;
     }
     #sidenav_name_company{
         height: 50%;
-        border: 2px solid black;
+        // border: 0.1px solid black;
         display: flex;
         justify-content: center;
         align-items: center;
-        font-size: 4vw;
-        overflow: auto;
+        font-size: 13px;
+        padding-bottom: 12%;
+    }
+    #sidenav_body{
+        width: 100%;
+        height: 77.5%;
+        margin-top: 7.5%;
+
+    }
+    .sidenav_row{
+        width: 100%;
+        height: 20%;
+        margin-left: 10%;
+    }
+    .sidenav_row_content{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+    }
+    .sidenav_row_picturebox{
+        width: 20%;
+        height: auto;
+    }
+    .sidenav_row_picture{
+        width: 30px;
+        height: 30px;
+    }
+    .sidenav_row_text{
+        width: 80%;
+        font-size: 25px;
     }
 }
