--- a/src/pages/messages/messages.scss
+++ b/src/pages/messages/messages.scss
@@ -141,7 +141,7 @@ html{
         height:100%;
     }
     .header_tab{
-        width: 24%;
+        width: 89px;
         height: 30%;
         border: 1px solid;
         border-radius: 2px;
@@ -149,5 +149,31 @@ html{
         display: flex;
         justify-content: center;
         align-items: center;
+    }
+    .profilebox{
+        width: 26%;
+        height: 50px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    #header_container{
+        width: 48%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    #profile_circle_big{
+        width: 50px;
+        height: 50px;
+        border-radius: 50px;
+        cursor: pointer;
+        /*border: 2px solid blue;*/
+    }
+    #profile_big{
+        width: 50px;
+        height: 50px;
+        border-radius: 50px;
     }
 }
