back arrow things work some cool boonk gang

--- a/src/components/pilot/pilot.html
+++ b/src/components/pilot/pilot.html
@@ -1,6 +1,6 @@
   <div id="rows">
       <div id="arrowbox">
-        <img src="../../assets/icon/Icons/Header/backarrow.png" id="arrowimage">
+        <img src="../../assets/icon/Icons/Header/backarrow.png" id="arrowimage" (click)= "goBack()">
       </div>
       <div class= "content_line2">
         <div class= "line_text">
