--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -50,9 +50,10 @@ header {
         top: 0;
         left: 0;
         background-color: white;
-        overflow-x: hidden;
+        overflow-x: scroll;
         transition: 0.5s;
         z-index: 2;
+        white-space: nowrap;
         
     }
     #sidenav_profilebox{
@@ -99,6 +100,7 @@ header {
         align-items: center;
         font-size: 13px;
         padding-bottom: 12%;
+        white-space: normal;
     }
     #sidenav_body{
         width: 100%;
