fixed the logic for footer selection

--- a/src/components/footer/footer.html
+++ b/src/components/footer/footer.html
@@ -2,7 +2,7 @@
     <div class="circle_container">
         <div class="circle_box">
             <div class="circle" (click)="goToHomePage()">
-                <img src="../../assets/icon/Icons/Bottom-row/products.png " class="icons">
+                <img id="img_products" src="../../assets/icon/Icons/Bottom-row/products.png " class="icons">
             </div>
         </div>
         <div class="label">
@@ -12,7 +12,7 @@
     <div class="circle_container">
         <div class="circle_box">
             <div class="circle" (click)="goToFormsPage()">
-                <img src="../../assets/icon/Icons/Bottom-row/forms.png" class="icons">   
+                <img id="img_forms" src="../../assets/icon/Icons/Bottom-row/forms.png" class="icons">   
             </div>
          </div>
          <div class="label">
@@ -22,7 +22,7 @@
     <div class="circle_container">
         <div class="circle_box">
             <div class="circle" (click)="goToFeedPage()">
-                <img src="../../assets/icon/Icons/Bottom-row/home.png" class="icons">
+                <img id="img_home" src="../../assets/icon/Icons/Bottom-row/home.png" class="icons">
             </div>
          </div>
          <div class="label">
@@ -32,7 +32,7 @@
     <div class="circle_container">
         <div class="circle_box">
             <div class="circle" (click)="goToSupportPage()">
-                <img src="../../assets/icon/Icons/Bottom-row/support.png" class="icons">
+                <img id="img_support" src="../../assets/icon/Icons/Bottom-row/support.png" class="icons">
              </div>
         </div>
         <div class="label">
@@ -42,7 +42,7 @@
     <div class="circle_container">
         <div class="circle_box">
             <div class="circle"(click)="goToMessagesPage()">
-                    <img src="../../assets/icon/Icons/Bottom-row/messages.png" class="icons">
+                    <img  id="img_messages" src="../../assets/icon/Icons/Bottom-row/messages.png" class="icons">
              </div>
         </div>
         <div class="label">
