--- a/src/pages/feed/feed.scss
+++ b/src/pages/feed/feed.scss
@@ -142,5 +142,11 @@ page-feed {
             height:100%;
         }
 
+        glyphicon {
+          height: 300px;
+          width: 300px;
+          border: 1px solid red;
+        }
+
     }
     
