--- a/src/pages/ticket/ticket.scss
+++ b/src/pages/ticket/ticket.scss
@@ -94,8 +94,15 @@ page-ticket {
         height: calc(100% - 200px)    ;
         display: flex;
         flex-direction: column;
+        border: 1px solid red;
        
     }
+
+   form {
+     width: 100%;
+     height: 100%;
+     border: 1px solid blue;
+   }
     #subjectBox{
         display:flex;
         flex-direction: column;
