--- a/src/components/scroll-item/scroll-item.html
+++ b/src/components/scroll-item/scroll-item.html
@@ -6,7 +6,7 @@
   </div>
   <div id="support_text">
       <p id="support_title">
-            <b>{{supportTitle}}</b>
+            <b>{{supportTitle}}</b>{{supportTitle2}}
       </p>
       <p id="support_body">
             {{supportBody}}
