now u can talk to travis scott

--- a/src/components/scroll-item/scroll-item.html
+++ b/src/components/scroll-item/scroll-item.html
@@ -1,4 +1,4 @@
-<div class="row_comp">
+<div class="row_comp" (click)="goToMessageHistory()">
   <div id="profile_box2">
       <div id="profile_circle2">
             <img src="../../assets/icon/Icons/Header/avi.png" id="profile2">
