--- a/src/pages/ticket/ticket.scss
+++ b/src/pages/ticket/ticket.scss
@@ -100,7 +100,6 @@ page-ticket {
    form {
      width: 100%;
      height: 100%;
-     border: 1px solid blue;
    }
     #subjectBox{
         display:flex;
@@ -108,12 +107,13 @@ page-ticket {
         justify-content: center;
     }
     #descriptionBox{
-        height: calc(100% - 122px);
+        height: calc(100% - 70px);
         width: 100%;
         display:flex;
         // flex-direction: column;
         justify-content: center;
         padding: 10px;
+        border: 0px;
     }
     .row{
         width: 80%;
@@ -121,7 +121,7 @@ page-ticket {
         /*border: 1px solid black;*/
         border-radius: 5%;
         background-color: lightgray;
-        border: 1px solid black;
+        
     }
 
     .hovercamText{
